<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="how_to_play">This is a game</string>
    <string name="tap_the_boxes_and_buttons">Tap the screen and buttons.</string>
    <string name="red_button">Red</string>
    <string name="yellow_button">Yellow</string>
    <string name="green_button">Green</string>
</resources>
