<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_one_text"
            style="@style/whiteBox" android:text="@string/box_one"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintDimensionRatio="w,1:1"/>
    <TextView
            android:text="@string/box_two"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/box_one_text" app:layout_constraintStart_toStartOf="parent"
            style="@style/whiteBox" app:layout_goneMarginStart="16dp"
            app:layout_goneMarginTop="16dp" android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/box_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/box_one_text" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/textView4" style="@style/whiteBox"/>
    <TextView
            android:text="@string/box_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@+id/textView2" android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/textView5" android:layout_marginTop="16dp"
            style="@style/whiteBox"/>
    <TextView
            android:text="@string/box_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" app:layout_constraintStart_toEndOf="@+id/textView2"
            android:layout_marginStart="16dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintHorizontal_bias="0.5"
            style="@style/whiteBox"/>

</androidx.constraintlayout.widget.ConstraintLayout>